Draft first unit example, adapt app code, adapt clang-format.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,10 @@
 # refer to the root source directory of the project as ${CAVEZ_SOURCE_DIR} and
 # to the root binary directory of the project as ${CAVEZ_BINARY_DIR}.
 cmake_minimum_required (VERSION 3.9.0)
-set (CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 project (Cavez VERSION 0.0.1 LANGUAGES CXX)
 
 set(SFML_DIR "SFML_DIR_NOT_SET" CACHE STRING "")
@@ -14,4 +17,5 @@ endif (${SFML_DIR} MATCHES "SFML_DIR_NOT_SET")
 set(SFML_STATIC_LIBRARIES TRUE)
 find_package(SFML 2.5 COMPONENTS system window graphics audio REQUIRED)
 
-add_subdirectory (src)
+add_subdirectory(src)
+add_subdirectory(app)
