Add unit structures for assets, game, hud, input, menu, messaging

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,7 @@
+add_subdirectory(assets)
+add_subdirectory(game)
+add_subdirectory(hud)
+add_subdirectory(input)
+add_subdirectory(menu)
+add_subdirectory(messaging)
 add_subdirectory(rendering)
