containers, dummy structures, math lib

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(game)
 add_subdirectory(hud)
 add_subdirectory(input)
 add_subdirectory(logger)
+add_subdirectory(math)
 add_subdirectory(menu)
 add_subdirectory(messaging)
 add_subdirectory(rendering)
