Add system manager and systems basis, prepare for entity refactoring

--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -2,6 +2,8 @@ add_library(game_interface INTERFACE)
 target_include_directories (game_interface INTERFACE include)
 
 add_library(game 
+	include/game/game_interface.hpp
+	include/game/game_state_interface.hpp
     src/game_impl.hpp
     src/game_impl.cpp
     src/game_state_impl.hpp
@@ -17,6 +19,12 @@ add_library(game
     src/ec/static_array/static_array.hpp
     src/ec/components/physics_component.hpp
     src/ec/components/render_component.hpp
+    src/systems/physics_system.hpp
+    src/systems/physics_system.cpp
+    src/systems/render_system.hpp
+    src/systems/render_system.cpp
+    src/systems/system_manager.hpp
+    src/systems/system_manager.cpp
 )
 
 target_include_directories(game
