--- a/src/assets/CMakeLists.txt
+++ b/src/assets/CMakeLists.txt
@@ -2,9 +2,13 @@ add_library(assets_interface INTERFACE)
 target_include_directories (assets_interface INTERFACE include)
 
 add_library(assets 
-    src/assets_impl.hpp
-    src/assets_impl.cpp)
+    include/assets/texture_id.hpp
+    include/assets/texture_manager_interface.hpp
+    src/texture_manager_impl.hpp
+    src/texture_manager_impl.cpp)
     
 target_link_libraries(assets
     PUBLIC
-        assets_interface)
+        assets_interface
+	PRIVATE
+		sfml-graphics)
