--- a/src/math/CMakeLists.txt
+++ b/src/math/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_library(math 
+    include/math/bounding_box.hpp
+	include/math/rect.hpp
     include/math/vector.hpp
     src/vector.cpp)
     
