Finish input unit side

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -3,6 +3,7 @@ add_executable (sandbox_app src/sandbox_main.cpp)
 target_link_libraries(sandbox_app
 PRIVATE
 	assets
+	input
 	rendering
 	game
     sfml-window
