Add physics handling basis, missing at least delta_time rotation

--- a/src/math/CMakeLists.txt
+++ b/src/math/CMakeLists.txt
@@ -1,7 +1,10 @@
-add_library(math 
-    include/math/bounding_box.hpp
-	include/math/rect.hpp
-    include/math/vector.hpp
-    src/vector.cpp)
+set(MATH_FILES 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/math/bounding_box.hpp
+	${CMAKE_CURRENT_SOURCE_DIR}/include/math/rect.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/math/vector.hpp)
+
+add_library(math INTERFACE)
     
-target_include_directories (math PUBLIC include)
+target_sources(math INTERFACE $<BUILD_INTERFACE:${MATH_FILES}>)
+target_include_directories(math INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>)
+
