Rendering interface change preparations

--- a/src/rendering/CMakeLists.txt
+++ b/src/rendering/CMakeLists.txt
@@ -6,6 +6,8 @@ add_library(rendering
     include/rendering/rendering_interface.hpp
     include/rendering/rendering_target.hpp
 	include/rendering/render_items.hpp
+    src/image_renderer.hpp
+    src/image_renderer.cpp
     src/rendering_impl.hpp
     src/rendering_impl.cpp)
     
