--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -37,6 +37,8 @@ set(GAME_FILES
     src/level/level_builder.cpp
     src/systems/camera_follow_system.hpp
     src/systems/camera_follow_system.cpp
+    src/systems/collider_update_system.hpp
+    src/systems/collider_update_system.cpp
     src/systems/input_system.hpp
     src/systems/input_system.cpp
     src/systems/physics_system.hpp
